--- a/src/Components/Form/Login.module.scss
+++ b/src/Components/Form/Login.module.scss
@@ -1,6 +1,10 @@
+@mixin bRadius($br){
+	border-radius: $br;
+	outline: none;
+}
+
+
 .login {
-
-
 	text-align: center;
 
 
@@ -14,10 +18,9 @@
 			width: 80%;
 			max-height: 2.8rem;
 			display: block;
-			border-radius: 0.5rem;
-			outline: none;
 			padding: 2.9% 2.9% 2.9% 7%;
 			font-weight: bold;
+			@include bRadius(0.5rem);
 
 		}
 
@@ -69,7 +72,6 @@
 
 		.inputLabel {
 			display: inline-block;
-
 			padding-left: 5%;
 			font-size: 0.8rem;
 
@@ -78,13 +80,10 @@
 		.inputLabel.errorInputLabel {
 			color: red;
 			display: inline-block;
-
-
 		}
 
 		.inputField.errorInputField {
 			border: 1px solid red;
-
 		}
 
 		.inputError {
@@ -96,40 +95,31 @@
 			width: 70%;
 			color: red;
 			padding: 1px 2%;
-
-
 			bottom: 50%;
 			left: 13%;
-
-
 		}
-
 	}
 
 	.loginCheck {
-
-
 		display: flex;
 		align-items: center;
 		font-size: 0.7rem;
 		margin: 0 auto;
-		align-content: center;
 		flex-wrap: wrap;
 		max-width: 88%;
 		justify-content: space-between;
 
 		.loginBtn {
 			cursor: pointer;
-			border-radius: 0.5rem;
-			outline: none;
+			@include bRadius(0.5rem);
 			border: none;
-			padding: 2% 8%;
-			margin-left: 0.2rem;
-			align-self: end;
+			padding: 0.7rem 2.5rem;
 			height: 100%;
 			color: white;
+			font-size: 1rem;
+			font-weight: bold;
+			display: inline-block;
 			background: radial-gradient(circle farthest-corner at bottom right, rgb(79, 182, 226), rgb(0, 76, 108));
-
 		}
 
 
@@ -156,11 +146,10 @@
 				text-align: left;
 				background-color: white;
 				padding: 1rem;
-				border-radius: 0.5rem;
-				outline: none;
+				@include bRadius(0.5rem);
 				color: rgba(0, 0, 0, 0.4);
 				position: absolute;
-				top: 200%;
+				top: 120%;
 				right: 2%;
 				opacity: 0;
 			}
@@ -171,16 +160,33 @@
 		}
 	}
 
-	@media screen and (max-width: 515px) {
+	@media screen and (max-width: 780px) {
 		.loginCheck {
 
 
 			.loginBtn {
-				margin: 0 0 0 60%;
+				margin:10% 0 0 60%;
 
 			}
 		}
 	}
+	@media screen and (max-width: 500px) {
+		.loginCheck {
+
+			.check {
+
+				.checkTitle {
+					right: -50%;
+				}
+			}
+
+			.loginBtn {
+				margin:10% 0 0 50%;
+
+			}
+		}
+	}
+
 
 
 	.loginRegistrBtns {
@@ -190,13 +196,12 @@
 		.loginRegistrBtn {
 			color: white;
 			cursor: pointer;
-			border-radius: 0.5rem;
-			outline: none;
+			@include bRadius(0.5rem);
 			border: none;
-			padding: 2% 8%;
-			margin-left: 0.2rem;
+			padding: 3% 8%;
 			align-self: end;
 			margin-bottom: 2rem;
+			font-weight: bold;
 			background: radial-gradient(circle farthest-corner at bottom right, rgb(255, 180, 0), rgb(170, 120, 0));
 		}
 	}
