--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -15,15 +15,24 @@ html, body {
 }
 
 .formWrapper {
-	position: relative;
-	max-width: 1110px;
-	margin: 0 auto;
-	background-color: rgb(245, 245, 245);
-	height: 1200px;
 
-	.twitterM,.twitterL,.twitterS,.faceBookS,
+	.form_Bac {
+		max-width: 100%;
+
+	}
+
+
+	position: relative;
+	max-width: 1114px;
+	margin: 0 auto;
+	background:url('./../src/icons/form_Bac.png');
+	background-size: 100%;
+
+
+
+	/*.twitterM,.twitterL,.twitterS,.faceBookS,
 	.faceBookM,.telegram,.instagram,.linkedin,
-	.youtube,.headerTitleBac,.roundLine,.lamp {
+	.youtube,.headerTitleBac,.roundLine,.lamp,.shape,.Login_to_bac {
 		position: absolute;
 	}
 
@@ -79,6 +88,18 @@ html, body {
 		top: 3%;
 		width: 7%;
 	}
+	.shape {
+		right: 18%;
+		top: 5%;
+		width: 8%;
+
+	}
+	.Login_to_bac {
+		right: 22%;
+		top: 15%;
+		width: 40%;
+
+	}
 
 	.linkedin {
 		left: 15%;
@@ -100,43 +121,38 @@ html, body {
 		display: inline-block;
 		right: 20%;
 		top: 13%;
-		font-size: 2.8vw;
+
 		font-weight: bold;
 		color: rgba(0, 0, 0, 0.3);
-		@include mediaMin(1200px,2vw);
+		!*@include mediaMin(1200px,2vw);
 		@include mediaMin(1300px,1.8vw);
 		@include mediaMin(1400px,1.7vw);
 		@include mediaMin(1500px,1.5vw);
-		@include mediaMin(1600px,1.3vw);
+		@include mediaMin(1600px,1.3vw);*!
 
-	}
+	}*/
 
 
 	.form {
-		position: relative;
-		max-width: 79.28%;
-		min-height: 48.2%;
+		position: absolute;
+		width: 74.057%;
+		height: 46.511%;
 		z-index: 2;
-		top: 20%;
-		left: 11%;
+		top: 31%;
+		left: 14.362%;
+
+
 		border: 1px solid rgb(206, 206, 206);
 		background-color: rgb(245, 245, 245);
 		border-radius: 1rem;
 		outline: none;
 
 		.formHeader {
-			color: white;
-			max-width: 100%;
-			font-weight: bold;
-			padding: 4%;
-			background-color: rgba(52, 183, 206, .65);
-			border-top-right-radius: 1rem;
-			border-top-left-radius: 1rem;
-			outline: none;
-			margin-bottom: 1rem;
-			display: flex;
-			align-items: center;
-			justify-content: space-between;
+
+
+			.compose {
+				width: 100%;
+			}
 
 			.headerTitle {
 				align-self: center;
@@ -212,10 +228,9 @@ html, body {
 				width: 49.9%;
 				text-align: center;
 
-				.reg {
-					margin-bottom: 1rem;
-					text-align: left;
-					padding-left: 5%;
+				.register {
+					display: block;
+					max-width: 15%;
 				}
 			}
 		}
