--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,27 +1,15 @@
-@mixin Top($top) {
-	@media screen and (max-width: 450px) {
-		top: $top;
-	}
-}
-@mixin mediaMin($width,$size) {
-	@media screen and (min-width: $width) {
-		font-size: $size;
-	}
-}
-
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700&display=swap&subset=cyrillic');
 html, body {
 	margin: 0;
 	padding: 0;
+	font-family: 'Source Sans Pro', sans-serif;
+	@media screen and (max-width: 500px) {
+		font-size: 80%;
+	}
+
 }
 
 .formWrapper {
-
-	.form_Bac {
-		max-width: 100%;
-
-	}
-
-
 	position: relative;
 	max-width: 1114px;
 	margin: 0 auto;
@@ -29,239 +17,81 @@ html, body {
 	background-size: 100%;
 
 
-
-	/*.twitterM,.twitterL,.twitterS,.faceBookS,
-	.faceBookM,.telegram,.instagram,.linkedin,
-	.youtube,.headerTitleBac,.roundLine,.lamp,.shape,.Login_to_bac {
-		position: absolute;
+	.form_Bac {
+		max-width: 100%;
 	}
-
-	.twitterM {
-		left: 7%;
-		top: 57%;
-		width: 9%;
-		transform: rotate(20deg);
-	}
-
-	.twitterL {
-		right: 5%;
-		top: 64%;
-		width: 12%;
-		transform: rotate(20deg);
-		@include Top(60%)
-	}
-
-	.twitterS {
-		right: 35%;
-		top: 80%;
-		width: 7%;
-		transform: rotate(20deg);
-		@include Top(65%)
-	}
-
-	.faceBookS {
-		right: 50%;
-		top: 70%;
-		width: 7%;
-		@include Top(63%)
-	}
-
-	.faceBookM {
-		right: 1%;
-		top: 20%;
-		width: 12%;
-	}
-
-	.telegram {
-		left: 5%;
-		top: 7%;
-		width: 10%;
-	}
-
-	.instagram {
-		left: 30%;
-		top: 2%;
-		width: 7%;
-	}
-	.lamp {
-		right: 12%;
-		top: 3%;
-		width: 7%;
-	}
-	.shape {
-		right: 18%;
-		top: 5%;
-		width: 8%;
-
-	}
-	.Login_to_bac {
-		right: 22%;
-		top: 15%;
-		width: 40%;
-
-	}
-
-	.linkedin {
-		left: 15%;
-		top: 70%;
-		width: 7%;
-		@include Top(65%)
-	}
-
-	.youtube {
-		right: 20%;
-		top: 70%;
-		width: 10%;
-		transform: rotate(-20deg);
-		@include Top(65%)
-
-	}
-
-	.headerTitleBac {
-		display: inline-block;
-		right: 20%;
-		top: 13%;
-
-		font-weight: bold;
-		color: rgba(0, 0, 0, 0.3);
-		!*@include mediaMin(1200px,2vw);
-		@include mediaMin(1300px,1.8vw);
-		@include mediaMin(1400px,1.7vw);
-		@include mediaMin(1500px,1.5vw);
-		@include mediaMin(1600px,1.3vw);*!
-
-	}*/
-
 
 	.form {
 		position: absolute;
-		width: 74.057%;
-		height: 46.511%;
+		width: 74.017%;
+		height: 46.899%;
 		z-index: 2;
-		top: 31%;
-		left: 14.362%;
-
-
-		border: 1px solid rgb(206, 206, 206);
+		top: 31.0077%;
+		bottom: 22.093%;
+		left: 14.672%;
 		background-color: rgb(245, 245, 245);
-		border-radius: 1rem;
+		border-top-left-radius: 0.6rem;
+		border-top-right-radius: 0.6rem;
+
 		outline: none;
-
 		.formHeader {
-
-
+			height: 20.23%;
+			outline: none;
 			.compose {
 				width: 100%;
 			}
-
-			.headerTitle {
-				align-self: center;
-				margin: 0 auto;
-				font-weight: bold;
-				font-size: 2.8vw;
-			@include mediaMin(1200px,2vw);
-			@include mediaMin(1300px,1.8vw);
-			@include mediaMin(1400px,1.7vw);
-			@include mediaMin(1500px,1.5vw);
-			@include mediaMin(1600px,1.3vw);
-
-			}
-
-			.note {
-				display: inline-block;
-				width: 2.5rem;
-				height: 2.5rem;
-				background-color: rgb(37, 156, 177);
-				border-radius: 50%;
-				line-height: 3rem;
-				text-align: center;
-				img {
-					width: 50%;
-				}
-			}
 		}
 
-
 		.formContent {
-			max-height: 83%;
-			display: flex;
-			justify-content: stretch;
-			flex-wrap: wrap;
+			position: absolute;
+			left: 0;
+			right: 0;
+			bottom: 0;
+			top: 20.23%;
+      display: flex;
+			height: 79.77%;
+			border: 1px solid rgb(206,206,206);
+			border-top: none;
+			border-bottom-left-radius: 0.6rem;
+			border-bottom-right-radius: 0.6rem;
 
 			.formContentLeft {
 				display: inline-block;
-				width: 49.9%;
+				width: 50%;
 				text-align: center;
+				position: absolute;
+				left: 0;
+				right: 50%;
+				bottom: 0;
+				top: 0;
 
-
-				.round {
-					position: relative;
-					text-align: center;
-
-					.roundLine {
-						left: 6%;
-						width: 87%;
-						border: 1px solid rgba(206, 206, 206, .5);
-						top: 38%;
-					}
-
-					.ringW {
-						position: relative;
-						z-index: 2;
-						margin: 1rem auto;
-						padding: 5px;
-						color: rgb(170, 170, 170);
-						width: 1rem;
-						height: 1rem;
-						border: 2px solid rgb(206, 206, 206);
-						border-radius: 50%;
-						line-height: 1rem;
-						text-align: center;
-						background: rgb(206, 206, 206);
-					}
+				.or {
+					padding: 9.8% 0 2.9% 0;
+					max-width: 80%;
 				}
 			}
 
 			.formContentRight {
-
+				position: absolute;
+				left: 50%;
+				right: 0;
+				bottom: 0;
+				top: 0;
 				display: inline-block;
-				width: 49.9%;
-				text-align: center;
+				width: 50%;
 
 				.register {
-					display: block;
-					max-width: 15%;
-				}
-			}
-		}
-		@media screen and (max-width: 450px) {
-			.formContent {
-				display: block;
-				width: 100%;
+					color: rgba(103, 103, 103, 0.8);
+					text-align: left;
+           padding-left: 5%;
+					margin: 3.5% 0 5% 0;
 
-				.formContentLeft {
-					display: block;
-					width: 100%;
-				}
-				.formContentRight {
-					display: block;
-					width: 100%;
+					font-size: 1.8vw;
+					font-family: 'Source Sans Pro SemiBold', sans-serif;
 				}
 			}
-		}
-
-		@media screen and (max-width: 500px) {
-			.formContent {
-				font-size: 85%;
-			}
-		}
-	}
-	@media screen and (max-width: 450px) {
-		.form {
-			top: 5%
 		}
 	}
 }
-
 
 
