--- a/src/Components/Form/Login.module.scss
+++ b/src/Components/Form/Login.module.scss
@@ -1,88 +1,107 @@
-@mixin marginLeft($width,$margin) {
-	@media screen and (max-width: $width) {
-		margin-left: $margin;
-	}
-}
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700&display=swap&subset=cyrillic');
 
-@mixin marginInput($width,$marginTop,$marginBottom) {
-	@media screen and (max-width: $width) {
-		margin: $marginTop auto $marginBottom;
-	}
-}
-
-$placeholderColor: rgba(0, 0, 0, 0.3);
+$placeholderColor: rgb(233, 233, 233);
+;
 $placeholderColorError: rgba(255, 0, 0, 0.3);
-$shad: 0 1px 4px rgba(0, 0, 0, .3),
--23px 0 20px -23px rgba(0, 0, 0, .6),
-23px 0 20px -23px rgba(0, 0, 0, .6),
-inset 0 0 40px rgba(0, 0, 0, .1);
+@mixin Placeholder($color) {
+	padding: 2.6% 3% 2.6% 3%;
+	color: $color;
+	font-weight: bold;
+	font-size: 1.5vw;
+	font-family: 'Source Sans Pro SemiBold', sans-serif;
+
+}
 
 @mixin bRadius($br) {
 	border-radius: $br;
 	outline: none;
 }
 
+
 .login {
 	text-align: center;
 
+	.regEmail, .regUserName, .regPassword {
+		text-align: left;
+		color: rgba(103, 103, 103, 0.651);
+		font-family: "Source Sans Pro", sans-serif;
+		font-size: 98.375%;
+		padding: 1% 0 0 5%;
+		margin-bottom: -2%;
+	}
+
+
 	.loginEmail, .loginPass, .loginName {
-		position: relative;
 		text-align: left;
 
 		.inputField {
-			margin: 2% auto 10%;
+			margin: 0 auto 5%;
 			width: 80%;
-			max-height: 2.8rem;
 			display: block;
 			padding: 2.9% 2.9% 2.9% 7%;
 			font-weight: bold;
 			border: 1px solid lawngreen;
-			@include bRadius(0.5rem);
-			@include marginInput(750px, 5%, 15%);
-			@include marginInput(650px, 10%, 20%);
-			@include marginInput(500px, 12%, 25%);
+			@include bRadius(0.3rem);
 
 			&:focus {
 				border: 1px solid lightblue;
 			}
 		}
 
-		@media screen and (max-width: 450px) {
-			.inputField {
-				width: 85%;
-				margin: 0.7rem auto 0.7rem;
-			}
+		input[type="password"] {
+			position: absolute;
+			left: 5%;
+			right: 5%;
+			bottom: 45%;
+			top: 40%;
+		}
+
+		input[type="text"] {
+			position: absolute;
+			left: 5%;
+			right: 5%;
+			bottom: 65%;
+			top: 20%;
+
+		}
+
+		input[type="email"] {
+			position: absolute;
+			left: 5%;
+			right: 5%;
+			bottom: 20%;
+			top: 50%;
 		}
 
 		input[type="password"]::placeholder {
-			color: $placeholderColor;
+			@include Placeholder($placeholderColor);
+
 		}
 
 		input[type="password"].errorInputField::placeholder {
-			color: $placeholderColorError;
+			@include Placeholder($placeholderColorError);
 		}
 
 		input[type="email"]::placeholder {
-			color: $placeholderColor;
+			@include Placeholder($placeholderColor);
 		}
 
 		input[type="email"].errorInputField::placeholder {
-			color: $placeholderColorError;
+			@include Placeholder($placeholderColorError);
 		}
 
 		input[type="text"]::placeholder {
-			color: $placeholderColor;
+			@include Placeholder($placeholderColor);
 		}
 
 		input[type="text"].errorInputField::placeholder {
-			color: $placeholderColorError;
+			@include Placeholder($placeholderColorError);
 		}
 
 		.inputLabel {
 			display: inline-block;
 			padding-left: 5%;
-			font-size: 0.8rem;
-
+			font-size: 0.7rem;
 		}
 
 		.inputLabel.errorInputLabel {
@@ -109,123 +128,119 @@ inset 0 0 40px rgba(0, 0, 0, .1);
 	}
 
 	.loginCheck {
-		display: flex;
-		align-items: center;
-		margin: 0 auto;
-		flex-wrap: wrap;
-		max-width: 88%;
-		justify-content: space-between;
 
+		margin: 0 auto;
+		position: absolute;
+		left: 0;
+		right: 0;
+		bottom: 30%;
+		top: 65%;
+		text-align: left;
 
 		.inputField[type=checkbox] {
-			zoom: 1.7;
-			display: inline-block;
+			align-items: center;
 			cursor: pointer;
-			padding: 0.5rem;
-			margin-right: 0.3rem;
+			color: rgb(225, 225, 225);
+			border-radius: 5px;
+			background-color: rgb(225, 225, 225);
+			width: 1.7vw;
+			height: 1.7vw;
+			position: absolute;
+			left: -18%;
+			bottom: -40%;
+
+		}
+
+		.inputField[type=checkbox].inputLabel {
+			display: none;
 		}
 
 		.check {
-			display: flex;
-			align-items: center;
-			position: relative;
-
-			.checkPass {
-				font-size: 0.7rem;
-				padding-bottom: 2px;
-			}
-
-			.checkTitle {
-				width: 10rem;
-				text-align: left;
-				background-color: white;
-				padding: 1rem;
-				@include bRadius(0.5rem);
-				color: rgba(0, 0, 0, 0.4);
-				position: absolute;
-				top: 120%;
-				opacity: 0;
-			}
+			font-family: "Source Sans Pro", sans-serif;
+			color: rgb(203, 203, 203);
+			font-size: 1.2vw;
+			position: absolute;
+			left: 15%;
+			bottom: 50%;
 		}
 
-		.checkPass:hover ~ .checkTitle {
-			opacity: 100;
-		}
-
-	}
-
-	.loginRegistrBtns {
-		text-align: right;
-		max-width: 94%;
-
-		.loginRegistrBtn {
-			color: white;
-			cursor: pointer;
+		.longer_enter_password {
 			@include bRadius(0.5rem);
-			border: 2px solid transparent;
-
-			padding: 3% 10%;
-			align-self: end;
-			margin-bottom: 2rem;
-			font-weight: bold;
-			background: radial-gradient(circle farthest-corner at bottom right, rgb(255, 180, 0), rgb(170, 120, 0));
-
-			&:hover {
-				background: radial-gradient(circle farthest-corner at bottom right, rgb(170, 120, 0), rgb(255, 180, 0));
-			}
-
-			&:active {
-				border: 2px solid gray;
-
-
-			}
-		}
-
-		@media screen and (max-width: 450px) {
-
-			.loginRegistrBtn {
-				padding: 2% 5%;
-				margin-bottom: 1rem;
-				margin-top: 0.5rem;
-			}
+			position: absolute;
+			top: 100%;
+			right: -20%;
+			opacity: 0;
 		}
 	}
-}
 
-.loginFormBtn {
-	text-align: right;
-	max-width: 95%;
-	margin-top: 12%;
+	.check:hover .longer_enter_password {
+		opacity: 100;
+	}
 
-	.loginBtn {
+
+	.loginRegisterBtn {
+		position: relative;
+		margin-top: 5%;
+		left: 27%;
+		max-width: 35%;
+		display: inline-block;
+		padding: 0;
 		cursor: pointer;
 		@include bRadius(0.5rem);
-		padding: 3% 10%;
-		border: 2px solid transparent;
-		color: white;
-		font-weight: bold;
-		background: radial-gradient(circle farthest-corner at bottom right, rgb(79, 182, 226), rgb(0, 76, 108));
+		border: none;
+		background: none;
+
+		.reg_btn {
+			max-width: 100%;
+		}
 
 		&:hover {
-			background: radial-gradient(circle farthest-corner at bottom right, rgb(0, 76, 108), rgb(79, 182, 226));
+			max-width: 36%;
 		}
 
 		&:active {
-			border: 2px solid gray;
+			border: 2px solid rgb(245, 245, 245);
 		}
+
 	}
 }
 
-@media screen and (max-width: 450px) {
-	.loginFormBtn {
-		margin-top: 5%;
 
-		.loginBtn {
-			padding: 2% 5%;
-		}
+.loginBtn {
+	position: absolute;
+	left: 60%;
+	right: 0;
+	bottom: 29%;
+	max-width: 40%;
+	display: inline-block;
+	padding: 0;
+	cursor: pointer;
+	@include bRadius(0.5rem);
+	border: none;
+	background: none;
+	margin-top: 1%;
+
+	.login_btn {
+		max-width: 80%;
 	}
 
+	&:hover {
+		max-width: 41%;
+	}
+
+	&:active {
+		border: 2px solid rgb(245, 245, 245);
+	}
 }
+
+
+
+
+
+
+
+
+
 
 
 
