--- a/src/Components/Form/Login.module.scss
+++ b/src/Components/Form/Login.module.scss
@@ -1,15 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700&display=swap&subset=cyrillic');
-
 $placeholderColor: rgb(233, 233, 233);
 ;
 $placeholderColorError: rgba(255, 0, 0, 0.3);
 @mixin Placeholder($color) {
-	padding: 2.6% 3% 2.6% 3%;
 	color: $color;
 	font-weight: bold;
-	font-size: 1.5vw;
-	font-family: 'Source Sans Pro SemiBold', sans-serif;
-
+	font-size: 1.1rem;
+	text-align: left;
+	font-family: 'Source Sans Pro', sans-serif;
 }
 
 @mixin bRadius($br) {
@@ -17,43 +15,156 @@ $placeholderColorError: rgba(255, 0, 0, 0.3);
 	outline: none;
 }
 
-
 .login {
 	text-align: center;
 
+
 	.regEmail, .regUserName, .regPassword {
 		text-align: left;
+		display: inline-block;
+		width: 100%;
 		color: rgba(103, 103, 103, 0.651);
 		font-family: "Source Sans Pro", sans-serif;
-		font-size: 98.375%;
-		padding: 1% 0 0 5%;
-		margin-bottom: -2%;
+		font-size: 1em;
 	}
 
+	.regEmail {
+		max-width: 80%;
+		position: absolute;
+		top: 14%;
+		bottom: 80%;
+		left: 5%;
+		right: 85%;
+	}
 
-	.loginEmail, .loginPass, .loginName {
+	.regUserName {
+		position: absolute;
+		top: 38%;
+		left: 5%;
+		right: 73%;
+		bottom: 57%;
+		@media screen and (max-width: 700px) {
+			top: 37%;
+			bottom: 58%;
+		}
+	}
+
+	.regPassword {
+		position: absolute;
+		top: 61%;
+		left: 5%;
+		right: 80%;
+		bottom: 36%;
+		@media screen and (max-width: 700px) {
+			top: 58%;
+			bottom: 39%;
+		}
+	}
+
+	.loginName, .loginPass, .loginEmail, .loginEmail.reg, .loginPass.reg, .loginName.reg {
 		text-align: left;
 
 		.inputField {
-			margin: 0 auto 5%;
-			width: 80%;
+			position: relative;
+			margin: 0 auto 3%;
+			width: 75%;
 			display: block;
-			padding: 2.9% 2.9% 2.9% 7%;
-			font-weight: bold;
+			padding: 1% 7% 1% 9%;
 			border: 1px solid lawngreen;
-			@include bRadius(0.3rem);
-
+			font-size: 1.1rem;
+			font-family: "Source Sans Pro", "sans-serif";
+			font-weight: bold;
+			@include bRadius(0.5rem);
 			&:focus {
 				border: 1px solid lightblue;
 			}
 		}
 
-		input[type="password"] {
-			position: absolute;
-			left: 5%;
-			right: 5%;
-			bottom: 45%;
-			top: 40%;
+		.logNameError {
+			.error {
+				font-size: 1em;
+				position: absolute;
+				top: 11.5%;
+				bottom: 85.5%;
+				right: 5%;
+			  max-width: 50%;
+				height: 1.2rem;
+				display: block;
+				padding: 1% 2%;
+				text-align: center;
+				background: rgba(255, 0, 0, 0.3);
+				color: white;
+				@include bRadius(0.5rem);
+				opacity: 0;
+				transition: opacity 700ms;
+			}
+
+			.warning {
+				position: absolute;
+				padding: 2%;
+				top: 21.5%;
+				left: 90%;
+				width: 0.3em;
+			}
+
+			.warning:hover ~ .error {
+				opacity: 100;
+				transition: opacity 700ms;
+			}
+		}
+
+		.logPassError {
+			@extend .logNameError;
+
+			.error {
+				top: 33.5%;
+				right: 5%;
+				bottom:66%;
+			}
+
+			.warning {
+				top: 43%;
+				left: 90%;
+			}
+
+			.warning:hover ~ .error {
+				opacity: 100;
+				transition: opacity 700ms;
+			}
+		}
+
+		.regEmailError {
+			@extend .logNameError;
+		}
+
+		.regNameError {
+			@extend .logNameError;
+
+			.error {
+				top: 35.5%;
+				right: 5%;
+				bottom:66%;
+			}
+
+			.warning {
+				top: 46%;
+				left: 90%;
+			}
+		}
+
+		.regPassError {
+			@extend .logNameError;
+
+			.error {
+				top: 58.5%;
+				right: 5%;
+				bottom:36%;
+			}
+
+			.warning {
+				top: 68.5%;
+				left: 90%;
+			}
 		}
 
 		input[type="text"] {
@@ -62,20 +173,18 @@ $placeholderColorError: rgba(255, 0, 0, 0.3);
 			right: 5%;
 			bottom: 65%;
 			top: 20%;
-
 		}
 
-		input[type="email"] {
+		input[type="password"] {
 			position: absolute;
 			left: 5%;
 			right: 5%;
-			bottom: 20%;
-			top: 50%;
+			bottom: 43%;
+			top: 42%;
 		}
 
 		input[type="password"]::placeholder {
 			@include Placeholder($placeholderColor);
-
 		}
 
 		input[type="password"].errorInputField::placeholder {
@@ -98,44 +207,57 @@ $placeholderColorError: rgba(255, 0, 0, 0.3);
 			@include Placeholder($placeholderColorError);
 		}
 
-		.inputLabel {
-			display: inline-block;
-			padding-left: 5%;
-			font-size: 0.7rem;
-		}
-
-		.inputLabel.errorInputLabel {
-			color: red;
-			display: inline-block;
-		}
-
 		.inputField.errorInputField {
-			border: 1px solid red;
+			border: 1px solid rgba(255, 0, 0, 0.3);
+		}
+	}
+
+	.loginEmail.reg, .loginPass.reg, .loginName.reg {
+
+		input[type="email"] {
+			position: absolute;
+			left: 5%;
+			right: 5%;
+			bottom: 65%;
+			top: 20%;
 		}
 
-		.inputError {
+		input[type="text"] {
 			position: absolute;
-			text-align: center;
-			background-color: transparent;
-			font-weight: normal;
-			font-size: 0.8rem;
-			width: 70%;
-			color: red;
-			padding: 1px 2%;
-			bottom: 50%;
-			left: 13%;
+			left: 5%;
+			right: 5%;
+			bottom: 41%;
+			top: 44%;
+		}
+
+		input[type="password"] {
+			position: absolute;
+			left: 5%;
+			right: 5%;
+			bottom: 18%;
+			top: 67%;
 		}
 	}
 
 	.loginCheck {
-
-		margin: 0 auto;
 		position: absolute;
-		left: 0;
+		left: 5%;
 		right: 0;
-		bottom: 30%;
-		top: 65%;
-		text-align: left;
+		bottom: 27%;
+		top: 66%;
+		@media screen and (max-width: 750px) {
+			bottom: 28.5%;
+			top: 64.5%;
+		}
+		@media screen and (max-width: 650px) {
+			bottom: 29.5%;
+			top: 63.5%;
+		}
+		@media screen and (max-width: 450px) {
+			bottom: 30%;
+			top: 63%;
+		}
+
 
 		.inputField[type=checkbox] {
 			align-items: center;
@@ -143,95 +265,105 @@ $placeholderColorError: rgba(255, 0, 0, 0.3);
 			color: rgb(225, 225, 225);
 			border-radius: 5px;
 			background-color: rgb(225, 225, 225);
-			width: 1.7vw;
-			height: 1.7vw;
-			position: absolute;
-			left: -18%;
-			bottom: -40%;
-
-		}
-
-		.inputField[type=checkbox].inputLabel {
-			display: none;
+			width: 1em;
+			height: 1em;
 		}
 
 		.check {
 			font-family: "Source Sans Pro", sans-serif;
 			color: rgb(203, 203, 203);
-			font-size: 1.2vw;
-			position: absolute;
-			left: 15%;
-			bottom: 50%;
+			font-size: 0.8em;
+			display: flex;
+			align-items: center;
+			font-weight: bold;
+			@media screen and (max-width: 650px) {
+				font-weight: normal;
+
+			}
+			@media screen and (max-width: 500px) {
+				font-size: 1.1em;
+				font-weight: bold;
+			}
 		}
+
 
 		.longer_enter_password {
 			@include bRadius(0.5rem);
 			position: absolute;
+			max-width: 100%;
 			top: 100%;
-			right: -20%;
+			bottom: 20%;
+			right: 50%;
 			opacity: 0;
+			transition: opacity 700ms;
+			left: -20%;
 		}
 	}
 
 	.check:hover .longer_enter_password {
 		opacity: 100;
+		transition: opacity 700ms;
 	}
 
 
 	.loginRegisterBtn {
-		position: relative;
-		margin-top: 5%;
-		left: 27%;
-		max-width: 35%;
-		display: inline-block;
+		position: absolute;
+		top: 85%;
+		left: 59%;
+		right: 10%;
+		bottom: 5%;
+		width: 37.536%;
+		height: 10%;
+		color: rgb(255, 255, 255);
+		font-family: "Source Sans Pro", sans-serif;
+		font-size: 1.36em;
 		padding: 0;
 		cursor: pointer;
-		@include bRadius(0.5rem);
+		@include bRadius(0.6rem);
 		border: none;
-		background: none;
-
-		.reg_btn {
-			max-width: 100%;
+		background: linear-gradient( to right bottom, rgb(170,120,0) 30%, rgb(255,180,0) 70%);
+		@media screen and (max-width: 500px) {
+			width: 30%;
+			left: 67%;
+			right: 10%;
 		}
-
 		&:hover {
-			max-width: 36%;
+			background: linear-gradient( to right bottom, rgb(255,180,0) 0%, rgb(170,120,0) 70%);
 		}
-
 		&:active {
 			border: 2px solid rgb(245, 245, 245);
 		}
-
 	}
 }
 
-
 .loginBtn {
 	position: absolute;
-	left: 60%;
-	right: 0;
-	bottom: 29%;
-	max-width: 40%;
-	display: inline-block;
+	top: 63%;
+	left: 59%;
+	right: 10%;
+	bottom: 33%;
+	width: 37.536%;
+	height: 10%;
+	color: rgb(255, 255, 255);
+	font-family: "Source Sans Pro", sans-serif;
+	font-size: 1.36em;
 	padding: 0;
 	cursor: pointer;
 	@include bRadius(0.5rem);
 	border: none;
-	background: none;
-	margin-top: 1%;
-
-	.login_btn {
-		max-width: 80%;
+	background: linear-gradient( to right bottom, rgb(0,76,108) 30%, rgb(79,182,226) 70%);
+	@media screen and (max-width: 500px) {
+		width: 30%;
+		left: 66%;
 	}
-
 	&:hover {
-		max-width: 41%;
+		background: linear-gradient( to right bottom, rgb(79,182,226) 0%, rgb(0,76,108) 70%);
 	}
-
 	&:active {
 		border: 2px solid rgb(245, 245, 245);
 	}
 }
+
 
 
 
