--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -95,59 +95,64 @@ html, body {
 					text-align: left;
 					padding-left: 5%;
 					margin: 3.6% 0 5% 0;
-				  font-size: 1.2em;
+					font-size: 1.2em;
 					font-family: 'Source Sans Pro SemiBold', sans-serif;
 				}
 			}
 		}
 	}
+}
 	@media screen and (max-width: 500px) {
-		.form {
-			top: 0;
-			bottom:0;
-			height: 99.7%;
+		.formWrapper {
+height: 1290px;
+			.form_Bac {
 
-			.formHeader {
-				max-height: 10%;
-				outline: none;
-
-				.compose {
-					width: 100%;
-				}
 			}
+			.form {
+top:10%;
 
-			.formContent {
-				flex-direction: column;
-        top: 0;
-				height: 100%;
+				.formHeader {
+					max-height: 10%;
+					outline: none;
 
-				.formContentLeft {
-					display: block;
-					top: 10%;
-					left: 0;
-					right: 0;
-					bottom: 40%;
-					width: 100%;
-
-					.or {
-						padding: 1% 0 1% 10%;
-						max-width: 80%;
-						max-height: 8%;
-						text-align: center;
+					.compose {
+						width: 100%;
 					}
 				}
 
-				.formContentRight {
-					display: block;
-					top: 45%;
-					right: 0;
-					left: 0;
-					bottom: 0;
-					width: 100%;
+				.formContent {
+					flex-direction: column;
+					top: 0;
+					height: 100%;
+
+					.formContentLeft {
+						display: block;
+						top: 10%;
+						left: 0;
+						right: 0;
+						bottom: 40%;
+						width: 100%;
+
+						.or {
+							padding: 1% 0 1% 10%;
+							max-width: 80%;
+							max-height: 8%;
+							text-align: center;
+						}
+					}
+
+					.formContentRight {
+						display: block;
+						top: 45%;
+						right: 0;
+						left: 0;
+						bottom: 0;
+						width: 100%;
+					}
 				}
 			}
 		}
+
 	}
-}
 
 
